other/resolve-image-to-digest/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resolve-image-to-digest
policies:
- ../resolve-image-to-digest.yaml
resources:
- pod.yaml
results:
- kind: Pod
  patchedResources:
  - patchedResource.yaml
  policy: resolve-image-to-digest
  resources:
  - busybox
  result: pass
  rule: resolve-to-digest
variables: values.yaml
